[package]
name = "large_int"
description = "An ease-of-use unbounded signed integer"
version = "0.2.0"
authors = ["dbyr <david.michael.byrne17@gmail.com>"]
edition = "2018"
repository = "https://github.com/dbyr/large_int"
homepage = "https://github.com/dbyr/large_int"
readme = "README.md"
keywords = ["unsigned", "int", "large", "unbounded", "integer"]
categories = ["data-structures", "encoding"]
license = "MIT OR Apache-2.0"
exclude = [".github*", ".gitignore"]